--- a/css/styles.css
+++ b/css/styles.css
@@ -627,7 +627,7 @@ span {
 
 /* Change color on hover */
 .footer-nav ul li a:hover {
-    color: #ff4500;
+    color: #8B0000;
 }
 
 /* FOOTER INTERACTIONS */
